Create tables for use organization params and return values

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -566,7 +566,7 @@
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
-          ["useOrganizationParams", "/references/javascript/types/use-organization-params"]
+          ["UseOrganizationParams", "/references/javascript/types/use-organization-params"]
         ]
       ]
     ]
