streamline types to dedicated page

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -565,8 +565,7 @@
           ["MagicLinkError", "/references/javascript/types/magic-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
-          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
-          ["UseOrganizationParams", "/references/javascript/types/use-organization-params"]
+          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"]
         ]
       ]
     ]
