add pages to nav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -562,6 +562,10 @@
         [
           ["PublicUserData", "/references/javascript/types/public-user-data"],
           ["RedirectOptions", "/references/javascript/types/redirect-options"],
+          ["SignInRedirectOptions", "/references/javascript/types/sign-in-redirect-options"],
+          ["SignUpRedirectOptions", "/references/javascript/types/sign-up-redirect-options"],
+          ["SignInInitialValues", "/references/javascript/types/sign-in-initial-values"],
+          ["SignUpInitialValues", "/references/javascript/types/sign-up-initial-values"],
           ["MagicLinkError", "/references/javascript/types/magic-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
