Migrate /references/go from Sanity to MDX

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -613,7 +613,8 @@
     [
       ["Overview", "references/go/overview"],
       ["Verifying sessions", "references/go/verifying-sessions"],
-      ["Other examples", "references/go/other-examples"]
+      ["Backend examples", "references/go/other-examples"],
+      ["Go example repository", "https://github.com/clerkinc/clerk-sdk-go"]
     ]
   ],
   [
