--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -614,7 +614,7 @@
       ["Overview", "references/go/overview"],
       ["Verifying sessions", "references/go/verifying-sessions"],
       ["Backend examples", "references/go/other-examples"],
-      ["Go example repository", "https://github.com/clerkinc/clerk-sdk-go"]
+      ["Go SDK repository", "https://github.com/clerkinc/clerk-sdk-go"]
     ]
   ],
   [
