feat: Introduce Organization Domains

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -482,7 +482,8 @@
         [
           ["Organization", "/references/javascript/organization/organization"],
           ["Members", "/references/javascript/organization/members"],
-          ["Invitations", "/references/javascript/organization/invitations"]
+          ["Invitations", "/references/javascript/organization/invitations"],
+          ["Domains", "/references/javascript/organization/domains"]
         ]
       ],
       [
@@ -492,6 +493,10 @@
       [
         "Organization Membership",
         "/references/javascript/organization-membership"
+      ],
+      [
+        "Organization Domain",
+        "/references/javascript/organization-domain"
       ],
       ["Session", "/references/javascript/session"],
       [
