Migrate /upgrade-guides from Sanity to MDX (#349)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -353,12 +353,9 @@
       "root": "upgrade-guides"
     },
     [
-      "# API Key Changes",
-      ["Overview", "/upgrade-guides/api-keys"],
-      "# URL-based session syncing",
-      ["Overview", "/upgrade-guides/url-based-session-syncing"],
-      "# Progressive Sign up",
-      ["Overview", "/upgrade-guides/progressive-sign-up"],
+      ["API Key Changes", "/upgrade-guides/api-keys"],
+      ["URL-based session syncing", "/upgrade-guides/url-based-session-syncing"],
+      ["Progressive Sign up", "/upgrade-guides/progressive-sign-up"],
       "# Upgrade to V3",
       ["Introduction", "/upgrade-guides/v3-introduction"],
       ["Client-side changes", "/upgrade-guides/v3-client-side-changes"],
