Migrate /references/ruby from Sanity to MDX (#358)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -630,7 +630,8 @@
     [
       ["Overview", "references/ruby/overview"],
       ["Available Methods", "references/ruby/available-methods"],
-      ["Rack/Rails integration", "references/ruby/rack-rails"]
+      ["Rack/Rails integration", "references/ruby/rack-rails"],
+      ["Ruby SDK repository", "https://github.com/clerkinc/clerk-sdk-ruby"]
     ]
   ],
   [
