Migrate /references/go from Sanity to MDX (#357)
Co-authored-by: Bryce Kalow <bryce@clerk.dev>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -610,7 +610,8 @@
     [
       ["Overview", "references/go/overview"],
       ["Verifying sessions", "references/go/verifying-sessions"],
-      ["Other examples", "references/go/other-examples"]
+      ["Backend examples", "references/go/other-examples"],
+      ["Go SDK repository", "https://github.com/clerkinc/clerk-sdk-go"]
     ]
   ],
   [
