--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -581,13 +581,12 @@
     },
     [
       ["Overview", "references/nodejs/overview"],
-      ["Available Methods", "references/nodejs/methods"],
-      ["Connect/Express Middleware", "references/nodejs/express-middleware"],
+      ["Available methods", "references/backend/overview"],
+      ["Connect/Express Middleware", "/docs/backend-requests/handling/nodejs"],
       [
-        "Networkless Token Verification",
+        "Networkless token verification",
         "references/nodejs/token-verification"
-      ],
-      ["Troubleshooting", "references/nodejs/troubleshooting"]
+      ]
     ]
   ],
   [
