feat(authentication): Add information about account linking

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -48,6 +48,7 @@
         "Social connections (OAuth)",
         "/authentication/social-connections/oauth"
       ],
+      ["Account linking", "/authentication/social-connections/account-linking"],
       ["Google", "/authentication/social-connections/google"],
       ["Facebook", "/authentication/social-connections/facebook"],
       ["Microsoft", "/authentication/social-connections/microsoft"],
