fix: Update types of `Organization.getMemberships` (#366)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -572,7 +572,8 @@
           ["MagicLinkError", "/references/javascript/types/magic-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
-          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"]
+          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
+          ["PaginatedResponse", "/references/javascript/types/paginated-response"]
         ]
       ]
     ]
