Added document and images covering testing with Postmna or Insomnia

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -136,6 +136,8 @@
     },
     [
       ["Overview", "/backend-requests/overview"],
+      "# Testing",
+      ["Testing with Postman / Insomnia", "/backend-requests/testing/postman-or-insomnia"],
       "# Making requests",
       ["Same-Origin Requests", "/backend-requests/making/same-origin"],
       ["Cross-Origin Requests", "/backend-requests/making/cross-origin"],
