clean up email address, phone number, and web3 wallet pages

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -549,7 +549,7 @@
         [
           ["Phone Number", "/references/javascript/phone-number/phone-number"],
           ["Verification", "/references/javascript/phone-number/verification"],
-          ["SecondFactor", "/references/javascript/phone-number/second-factor"]
+          ["Second factor", "/references/javascript/phone-number/second-factor"]
         ]
       ],
       [
