Add UserProfile custom pages docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -216,6 +216,13 @@
         ]
       ],
       ["Localization prop (i18n)", "/components/customization/localization"],
+      [
+        { "title": "Custom Pages" },
+        [
+          ["User Profile", "/components/customization/user-profile-custom-pages"],
+          ["Organization Profile", "/components/customization/organization-profile-custom-pages"]
+        ]
+      ],
       "# Control Components",
       [
         "<AuthenticateWithRedirectCallback />",
