Fix CustomPage link

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -581,7 +581,8 @@
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
-          ["PaginatedResponse", "/references/javascript/types/paginated-response"]
+          ["PaginatedResponse", "/references/javascript/types/paginated-response"],
+          ["CustomPage", "/references/javascript/types/custom-page"]
         ]
       ]
     ]
