--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -53,8 +53,8 @@
       ["Restrictions", "/authentication/configuration/restrictions"],
       ["SAML at Clerk", "/authentication/saml-at-clerk"],
       "# Prebuilt Components",
-      ["<SignIn/>", "/components/authentication/sign-in"],
-      ["<SignUp/>", "/components/authentication/sign-up"],
+      ["<SignIn />", "/components/authentication/sign-in"],
+      ["<SignUp />", "/components/authentication/sign-up"],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
       [
@@ -113,10 +113,10 @@
     [
       ["Overview", "/organizations/overview"],
       "# Prebuilt Components",
-      ["<CreateOrganization/>", "/components/organization/create-organization"],
-      ["<OrganizationProfile/>", "/components/organization/organization-profile"],
-      ["<OrganizationSwitcher/>", "/components/organization/organization-switcher"],
-      ["<OrganizationList/>", "/components/organization/organization-list"],
+      ["<CreateOrganization />", "/components/organization/create-organization"],
+      ["<OrganizationProfile />", "/components/organization/organization-profile"],
+      ["<OrganizationSwitcher />", "/components/organization/organization-switcher"],
+      ["<OrganizationList />", "/components/organization/organization-list"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
@@ -181,27 +181,27 @@
     },
     [
       ["Overview", "/components/overview"],
-      ["<ClerkProvider/>", "/components/clerk-provider"],
+      ["<ClerkProvider />", "/components/clerk-provider"],
       "# Authentication Components",
-      ["<SignIn/>", "/components/authentication/sign-in"],
-      ["<SignUp/>", "/components/authentication/sign-up"],
+      ["<SignIn />", "/components/authentication/sign-in"],
+      ["<SignUp />", "/components/authentication/sign-up"],
 
       "# User Components",
-      ["<UserButton/>", "/components/user/user-button"],
-      ["<UserProfile/>", "/components/user/user-profile"],
+      ["<UserButton />", "/components/user/user-button"],
+      ["<UserProfile />", "/components/user/user-profile"],
 
       "# Organization Components",
-      ["<CreateOrganization/>", "/components/organization/create-organization"],
+      ["<CreateOrganization />", "/components/organization/create-organization"],
       [
-        "<OrganizationProfile/>",
+        "<OrganizationProfile />",
         "/components/organization/organization-profile"
       ],
       [
-        "<OrganizationSwitcher/>",
+        "<OrganizationSwitcher />",
         "/components/organization/organization-switcher"
       ],
       [
-        "<OrganizationList/>",
+        "<OrganizationList />",
         "/components/organization/organization-list"
       ],
 
@@ -218,36 +218,36 @@
       ["Localization prop (i18n)", "/components/customization/localization"],
       "# Control Components",
       [
-        "<AuthenticateWithRedirectCallback/>",
+        "<AuthenticateWithRedirectCallback />",
         "/components/control/authenticate-with-callback"
       ],
-      ["<ClerkLoaded/>", "/components/control/clerk-loaded"],
-      ["<ClerkLoading/>", "/components/control/clerk-loading"],
-      ["<MultisessionAppSupport/>", "/components/control/multi-session"],
-      ["<RedirectToSignIn/>", "/components/control/redirect-to-signin"],
-      ["<RedirectToSignUp/>", "/components/control/redirect-to-signup"],
+      ["<ClerkLoaded />", "/components/control/clerk-loaded"],
+      ["<ClerkLoading />", "/components/control/clerk-loading"],
+      ["<MultisessionAppSupport />", "/components/control/multi-session"],
+      ["<RedirectToSignIn />", "/components/control/redirect-to-signin"],
+      ["<RedirectToSignUp />", "/components/control/redirect-to-signup"],
       [
-        "<RedirectToUserProfile/>",
+        "<RedirectToUserProfile />",
         "/components/control/redirect-to-userprofile"
       ],
       [
-        "<RedirectToOrganizationProfile/>",
+        "<RedirectToOrganizationProfile />",
         "/components/control/redirect-to-organizationprofile"
       ],
       [
-        "<RedirectToCreateOrganization/>",
+        "<RedirectToCreateOrganization />",
         "/components/control/redirect-to-createorganization"
       ],
-      ["<SignedIn/>", "/components/control/signed-in"],
-      ["<SignedOut/>", "/components/control/signed-out"],
+      ["<SignedIn />", "/components/control/signed-in"],
+      ["<SignedOut />", "/components/control/signed-out"],
       "# Unstyled Components",
-      ["<SignInButton/>", "/components/unstyled/sign-in-button"],
+      ["<SignInButton />", "/components/unstyled/sign-in-button"],
       [
-        "<SignInWithMetamaskButton/>",
+        "<SignInWithMetamaskButton />",
         "/components/unstyled/sign-in-with-metamask"
       ],
-      ["<SignUpButton/>", "/components/unstyled/sign-up-button"],
-      ["<SignOutButton/>", "/components/unstyled/sign-out-button"]
+      ["<SignUpButton />", "/components/unstyled/sign-up-button"],
+      ["<SignOutButton />", "/components/unstyled/sign-out-button"]
     ]
   ],
   [
@@ -601,7 +601,7 @@
       "root": "references/remix"
     },
     [
-      ["<ClerkApp/>", "references/remix/clerk-app"],
+      ["<ClerkApp />", "references/remix/clerk-app"],
       ["ClerkCatchBoundary()", "references/remix/clerk-catch-boundary"]
     ]
   ],
