--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -135,7 +135,7 @@
       "root": "backend-requests"
     },
     [
-      ["Overview", "/backend-requests/overview"],
+      ["Overview", "/backend-requests/overview"],      
       "# Making requests",
       ["Same-Origin Requests", "/backend-requests/making/same-origin"],
       ["Cross-Origin Requests", "/backend-requests/making/cross-origin"],
@@ -318,7 +318,8 @@
       ["Overview", "/testing/overview"],
       ["Test Emails and Phones", "/testing/test-emails-and-phones"],
       "# Testing Frameworks",
-      ["Cypress", "/testing/cypress"]
+      ["Cypress", "/testing/cypress"],
+      ["Postman or Insomnia", "/testing/postman-or-insomnia"]
     ]
   ],
   [
