Resolve PR comments
Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.c

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -219,8 +219,8 @@
       [
         { "title": "Custom Pages" },
         [
-          ["User Profile", "/components/customization/user-profile-custom-pages"],
-          ["Organization Profile", "/components/customization/organization-profile-custom-pages"]
+          ["<UserProfile />", "/components/customization/user-profile-custom-pages"],
+          ["<OrganizationProfile />", "/components/customization/organization-profile-custom-pages"]
         ]
       ],
       "# Control Components",
