docs(proxy): Add initial proxy documentation (#388)
Co-authored-by: Giannis Katsanos <gkats@fastmail.com>
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -330,7 +330,8 @@
     },
     [
       ["Clerk as an OAuth2 Provider", "/advanced-usage/clerk-idp"],
-      ["Adding Satellite Domains", "/advanced-usage/satellite-domains"]
+      ["Adding Satellite Domains", "/advanced-usage/satellite-domains"],
+      ["Proxying the Clerk Frontend API", "/advanced-usage/using-proxies"]
     ]
   ],
   [
