streamlining Next.js quickstart and moving user session and custom pages guides to Next.js SDK

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -22,7 +22,8 @@
       "# Backend",
       ["Fastify", "/quickstarts/fastify"],
       "# Example Apps",
-      ["Next.js starter repo", "https://github.com/clerkinc/clerk-next-app"],
+      ["Next.js starter repo with App Router", "https://github.com/clerkinc/clerk-next-app"],
+      ["Next.js starter repo with Pages Router", "https://github.com/alexisintech/clerk-next-app-pages"],
       ["React starter repo", "https://github.com/clerkinc/clerk-react-starter"],
       ["Remix starter repo", "https://github.com/clerkinc/remix-auth-starter"],
       [
@@ -406,7 +407,10 @@
       "---",
       ["Authentication Object", "/references/nextjs/authentication-object"],
       ["Using tRPC", "/references/nextjs/trpc"],
-      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
+      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"],
+      "# Guides",
+      ["Read session and user data", "/references/nextjs/read-sessions-data"],
+      ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"]
     ]
   ],
   [
