updating Clerk setup tut, rejiggering the Next.js SDK sidebar

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -395,6 +395,12 @@
     { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
     [
       ["Overview", "/references/nextjs/overview"],
+      "# Guides",
+      ["Read session and user data", "/references/nextjs/read-sessions-data"],
+      ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
+      ["Using tRPC", "/references/nextjs/trpc"],
+      "---",
+      ["Authentication Object", "/references/nextjs/authentication-object"],
       ["authMiddleware()", "/references/nextjs/auth-middleware"],
       "# App Router",
       ["auth()", "/references/nextjs/auth"],
@@ -404,13 +410,8 @@
       "# Pages Router",
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
-      "---",
-      ["Authentication Object", "/references/nextjs/authentication-object"],
-      ["Using tRPC", "/references/nextjs/trpc"],
-      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"],
-      "# Guides",
-      ["Read session and user data", "/references/nextjs/read-sessions-data"],
-      ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"]
+      "Deprecated",
+      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
   [
