update tRPC and Next docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -398,8 +398,8 @@
       "# Guides",
       ["Read session and user data", "/references/nextjs/read-sessions-data"],
       ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
-      ["Using tRPC", "/references/nextjs/trpc"],
-      "---",
+      ["Integrate Clerk into your app tRPC", "/references/nextjs/trpc"],
+      "# References",
       ["Authentication Object", "/references/nextjs/authentication-object"],
       ["authMiddleware()", "/references/nextjs/auth-middleware"],
       "# App Router",
