adding clientside helpers to overview

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -410,7 +410,7 @@
       "# Pages Router",
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
-      "Deprecated",
+      "# Deprecated",
       ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
