--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -216,6 +216,13 @@
         ]
       ],
       ["Localization prop (i18n)", "/components/customization/localization"],
+      [
+        { "title": "Custom Pages" },
+        [
+          ["<UserProfile />", "/components/customization/user-profile"],
+          ["<OrganizationProfile />", "/components/customization/organization-profile"]
+        ]
+      ],
       "# Control Components",
       [
         "<AuthenticateWithRedirectCallback />",
@@ -580,7 +587,8 @@
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
-          ["PaginatedResponse", "/references/javascript/types/paginated-response"]
+          ["PaginatedResponse", "/references/javascript/types/paginated-response"],
+          ["CustomPage", "/references/javascript/types/custom-page"]
         ]
       ]
     ]
