--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -20,21 +20,7 @@
       ["React", "/quickstarts/react"],
       ["Expo", "/quickstarts/expo"],
       "# Backend",
-      ["Fastify", "/quickstarts/fastify"],
-      "# Example Apps",
-      ["Next.js starter repo with App Router", "https://github.com/clerkinc/clerk-next-app"],
-      ["Next.js starter repo with Pages Router", "https://github.com/alexisintech/clerk-next-app-pages"],
-      ["React starter repo", "https://github.com/clerkinc/clerk-react-starter"],
-      ["Remix starter repo", "https://github.com/clerkinc/remix-auth-starter"],
-      [
-        "Redwood starter repo",
-        "https://github.com/clerkinc/clerk-redwood-starter"
-      ],
-      ["Expo starter repo", "https://github.com/clerkinc/clerk-expo-starter"],
-      [
-        "Fastify starter repo",
-        "https://github.com/clerkinc/clerk-fastify-starter/"
-      ]
+      ["Fastify", "/quickstarts/fastify"]
     ]
   ],
   "---",
@@ -396,20 +382,20 @@
     [
       ["Overview", "/references/nextjs/overview"],
       "# Guides",
-      ["Read session and user data", "/references/nextjs/read-sessions-data"],
+      ["Read session and user data", "/references/nextjs/read-session-data"],
       ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
-      ["Integrate Clerk into your app tRPC", "/references/nextjs/trpc"],
-      "# References",
-      ["Authentication Object", "/references/nextjs/authentication-object"],
-      ["authMiddleware()", "/references/nextjs/auth-middleware"],
-      "# App Router",
+      ["Integrate Clerk into your app with tRPC", "/references/nextjs/trpc"],
+      "# App Router References",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
       ["Route Handlers", "/references/nextjs/route-handlers"],
       ["Server Actions", "/references/nextjs/server-actions"],
-      "# Pages Router",
+      "# Pages Router References",
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
+      "# Other References",
+      ["Authentication Object", "/references/nextjs/authentication-object"],
+      ["authMiddleware()", "/references/nextjs/auth-middleware"],
       "# Deprecated",
       ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
