--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -20,20 +20,7 @@
       ["React", "/quickstarts/react"],
       ["Expo", "/quickstarts/expo"],
       "# Backend",
-      ["Fastify", "/quickstarts/fastify"],
-      "# Example Apps",
-      ["Next.js starter repo", "https://github.com/clerkinc/clerk-next-app"],
-      ["React starter repo", "https://github.com/clerkinc/clerk-react-starter"],
-      ["Remix starter repo", "https://github.com/clerkinc/remix-auth-starter"],
-      [
-        "Redwood starter repo",
-        "https://github.com/clerkinc/clerk-redwood-starter"
-      ],
-      ["Expo starter repo", "https://github.com/clerkinc/clerk-expo-starter"],
-      [
-        "Fastify starter repo",
-        "https://github.com/clerkinc/clerk-fastify-starter/"
-      ]
+      ["Fastify", "/quickstarts/fastify"]
     ]
   ],
   "---",
@@ -402,18 +389,22 @@
     { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
     [
       ["Overview", "/references/nextjs/overview"],
-      ["authMiddleware()", "/references/nextjs/auth-middleware"],
-      "# App Router",
+      "# Guides",
+      ["Read session and user data", "/references/nextjs/read-session-data"],
+      ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
+      ["Integrate Clerk into your app with tRPC", "/references/nextjs/trpc"],
+      "# App Router References",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
       ["Route Handlers", "/references/nextjs/route-handlers"],
       ["Server Actions", "/references/nextjs/server-actions"],
-      "# Pages Router",
+      "# Pages Router References",
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
-      "---",
+      "# Other References",
       ["Authentication Object", "/references/nextjs/authentication-object"],
-      ["Using tRPC", "/references/nextjs/trpc"],
+      ["authMiddleware()", "/references/nextjs/auth-middleware"],
+      "# Deprecated",
       ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
