--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -338,8 +338,9 @@
     [
       ["Overview", "/troubleshooting/overview"],
       ["Email Deliverability", "/troubleshooting/email-deliverability"],
+      ["Script Loading", "/troubleshooting/script-loading"],
       "# Help & Support",
-      ["Community Discord", "https://discord.com/invite/b5rXHjAg7A"],
+      ["Community Discord", "https://clerk.com/discord"],
       ["Contact Support", "https://clerk.com/support"]
     ]
   ],
