adding community svelte SDK to our sidebar

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -649,6 +649,17 @@
   ],
   [
     {
+      "title": "Svelte",
+      "icon": "svelte",
+      "root": "references/svelte",
+      "tag": "Community"
+    },    
+    [
+      ["Svelte", "https://github.com/markjaquith/clerk-sveltekit"]
+    ]
+  ],
+  [
+    {
       "title": "Vue",
       "icon": "vue",
       "root": "references/vue",
