migrate github org name from clerkinc to clerk

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Checkout application
         uses: actions/checkout@v3.5.3
         with:
-          repository: clerkinc/clerk-marketing
+          repository: clerk/clerk-marketing
           token: ${{ secrets.CLERK_GH_TOKEN }}
           path: app
           ref: production
