--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -624,7 +624,7 @@
       ["Overview", "references/go/overview"],
       ["Verifying sessions", "references/go/verifying-sessions"],
       ["Backend examples", "references/go/other-examples"],
-      ["Go SDK repository", "https://github.com/clerkinc/clerk-sdk-go"]
+      ["Go SDK repository", "https://github.com/clerk/clerk-sdk-go"]
     ]
   ],
   [
@@ -645,7 +645,7 @@
       ["Overview", "references/ruby/overview"],
       ["Available Methods", "references/ruby/available-methods"],
       ["Rack/Rails integration", "references/ruby/rack-rails"],
-      ["Ruby SDK repository", "https://github.com/clerkinc/clerk-sdk-ruby"]
+      ["Ruby SDK repository", "https://github.com/clerk/clerk-sdk-ruby"]
     ]
   ],
   [
