Added doc page for authenicateRequest() (#295)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -792,6 +792,7 @@
           ["getSession()", "/references/backend/sessions/get-session"],
           ["getSessionList()", "/references/backend/sessions/get-session-list"],
           ["getToken()", "/references/backend/sessions/get-token"],
+          ["authenticateRequest()", "/references/backend/sessions/authenticate-request"],
           ["verifySession()", "/references/backend/sessions/verify-session"],
           ["revokeSession()", "/references/backend/sessions/revoke-session"]
         ]
