Updated title in manifest.json

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -92,7 +92,7 @@
       ["<UserButton />", "/components/user/user-button"],
       ["<UserProfile />", "/components/user/user-profile"],
       "# Guides",
-      ["Sync data to your backend", "/users/sync-data"],
+      ["Sync Clerk data to your backend with webhooks", "/users/sync-data"],
       ["Web3 authentication", "/users/web3"]
     ]
   ],
