--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -38,6 +38,7 @@
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Restrictions", "/authentication/configuration/restrictions"],
+      ["Lockout suspicious accounts", "/authentication/configuration/lockout"],
       ["SAML at Clerk", "/authentication/saml-at-clerk"],
       "# Prebuilt Components",
       ["<SignIn />", "/components/authentication/sign-in"],
