add redwood as a community SDK reference

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -650,6 +650,17 @@
   ],
   [
     {
+      "title": "Redwood",
+      "icon": "redwood",
+      "root": "references/redwood",
+      "tag": "Community"
+    },
+    [
+      ["Redwood", "https://redwoodjs.com/docs/auth/clerk"]
+    ]
+  ],
+  [
+    {
       "title": "Svelte",
       "icon": "svelte",
       "root": "references/svelte",
