Add a /custom-flows/account-lockout page to cover custom usage of lock/unlock operations

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -271,7 +271,8 @@
         "Multi-session applications",
         "/custom-flows/multi-session-applications"
       ],
-      ["Error handling", "/custom-flows/error-handling"]
+      ["Error handling", "/custom-flows/error-handling"],
+      ["Account lockout", "/custom-flows/account-lockout"]
     ]
   ],
   "---",
