Moved Notion doc for creatingd repros into Docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -342,7 +342,8 @@
       ["Script Loading", "/troubleshooting/script-loading"],
       "# Help & Support",
       ["Community Discord", "https://clerk.com/discord"],
-      ["Contact Support", "https://clerk.com/support"]
+      ["Contact Support", "https://clerk.com/support"],
+      ["Creating a Reproduction", "/troubleshooting/creating-a-reproduction"]
     ]
   ],
   [
