Added Next, Remix, Rect, JS, Gatsby, to SDK manifest sections

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -392,6 +392,7 @@
     [
       ["Overview", "/references/nextjs/overview"],
       "# Guides",
+      ["Next.js Quickstart", "/quickstarts/nextjs"],
       ["Read session and user data", "/references/nextjs/read-session-data"],
       ["Add custom sign up and sign in pages", "/references/nextjs/custom-signup-signin-pages"],
       ["Integrate Clerk into your app with tRPC", "/references/nextjs/trpc"],
@@ -414,6 +415,7 @@
     { "title": "React", "icon": "react", "root": "references/react" },
     [
       ["Overview", "/references/react/overview"],
+      ["React Quickstart", "/quickstarts/react"],
       "# Client-side Helpers",
       ["useUser()", "/references/react/use-user"],
       ["useClerk()", "/references/react/use-clerk"],
@@ -434,6 +436,7 @@
     },
     [
       ["Overview", "/references/javascript/overview"],
+      ["JavaScript Quickstart", "/quickstarts/javascript"],
       [
         { "title": "Clerk" },
         [
@@ -610,6 +613,7 @@
       "root": "references/remix"
     },
     [
+      ["Remix Quickstart", "/quickstarts/remix"],
       ["<ClerkApp />", "references/remix/clerk-app"],
       ["ClerkCatchBoundary()", "references/remix/clerk-catch-boundary"]
     ]
@@ -633,7 +637,10 @@
       "icon": "gatsby",
       "root": "references/gatsby"
     },
-    [["withServerAuth()", "references/gatsby/with-server-auth"]]
+    [
+      ["Gatsby Quickstart", "/quickstarts/gatsby"],
+      ["withServerAuth()", "references/gatsby/with-server-auth"]
+    ]
   ],
   [
     {
