reorganize page to use Steps component; overall content editorial

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -341,9 +341,9 @@
       ["Email Deliverability", "/troubleshooting/email-deliverability"],
       ["Script Loading", "/troubleshooting/script-loading"],
       "# Help & Support",
+      ["Create a minimal reproduction", "/troubleshooting/create-a-minimal-reproduction"],
       ["Community Discord", "https://clerk.com/discord"],
-      ["Contact Support", "https://clerk.com/support"],
-      ["Creating a Reproduction", "/troubleshooting/creating-a-reproduction"]
+      ["Contact Support", "https://clerk.com/support"]
     ]
   ],
   [
