adding deployment step to Next quickstart and swapping 'deployments and migrations' in navigation to reflect ordering of content in that section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -293,7 +293,7 @@
   ],
   [
     {
-      "title": "Migrations & Deployments",
+      "title": "Deployments & Migrations",
       "icon": "rocket",
       "root": "deployments"
     },
