test file for interviews

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -18,6 +18,7 @@
       "# Frontend",
       ["JavaScript", "/quickstarts/javascript"],
       ["React", "/quickstarts/react"],
+      ["Test React", "/quickstarts/test-react"],
       ["Expo", "/quickstarts/expo"],
       "# Backend",
       ["Fastify", "/quickstarts/fastify"]
