adding guide section and grouping the user lock docs into one section

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -23,6 +23,20 @@
       ["Fastify", "/quickstarts/fastify"]
     ]
   ],
+  [
+    {
+      "title": "Guides",
+      "icon": "book-open",
+      "root": "guides"
+    },
+    [ ["Overview","/guides/overview"],
+      "# Protect accounts from attacks",
+      ["Brute force attacks and locking user accounts","/guides/user-lock-guide"],
+      ["Customize user lockout duration and login attempts limits", "/guides/customize-user-lockout"],
+      ["Unlock accounts from the Clerk Dashboard", "/guides/unlock-user-accounts"],
+      ["Programmatically lock and unlock accounts", "/guides/programatically-lock-user-accounts"]
+    ]
+  ],
   "---",
   [
     {
@@ -38,7 +52,6 @@
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Restrictions", "/authentication/configuration/restrictions"],
-      ["Lock and unlock user accounts under attack", "/authentication/configuration/lockout"],
       ["SAML at Clerk", "/authentication/saml-at-clerk"],
       "# Prebuilt Components",
       ["<SignIn />", "/components/authentication/sign-in"],
@@ -271,8 +284,7 @@
         "Multi-session applications",
         "/custom-flows/multi-session-applications"
       ],
-      ["Error handling", "/custom-flows/error-handling"],
-      ["Account lockout", "/custom-flows/account-lockout"]
+      ["Error handling", "/custom-flows/error-handling"]
     ]
   ],
   "---",
@@ -295,7 +307,7 @@
   ],
   [
     {
-      "title": "Migrations & Deployments",
+      "title": "Deployments & Migrations",
       "icon": "rocket",
       "root": "deployments"
     },
@@ -343,6 +355,7 @@
       ["Email Deliverability", "/troubleshooting/email-deliverability"],
       ["Script Loading", "/troubleshooting/script-loading"],
       "# Help & Support",
+      ["Create a minimal reproduction", "/troubleshooting/create-a-minimal-reproduction"],
       ["Community Discord", "https://clerk.com/discord"],
       ["Contact Support", "https://clerk.com/support"]
     ]
