Initial commit for roles and permissions docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -118,6 +118,17 @@
     ]
   ],
   [
+    { "title": "Roles and Permissions", "icon": "user-group", "root": "roles-permissions" },
+    [
+      ["Overview", "/roles-permissions/overview"],
+      "# Prebuilt Components",
+      ["<Gate />", "/components/roles-permissions/gate"],
+      "# Guides",
+      ["Create custom roles and assign permissions with Clerk", "/roles-permissions/create-roles-permissions"],
+      ["Use custom permissions to show and hide content from users", "/roles-permissions/permssions-show-hide-content"],
+    ]
+  ],
+  [
     {
       "title": "Backend Requests",
       "icon": "request-authentication",
@@ -219,6 +230,7 @@
       ],
       ["<ClerkLoaded />", "/components/control/clerk-loaded"],
       ["<ClerkLoading />", "/components/control/clerk-loading"],
+      ["<Gate />", "/components/roles-permissions/gate"],
       ["<MultisessionAppSupport />", "/components/control/multi-session"],
       ["<RedirectToSignIn />", "/components/control/redirect-to-signin"],
       ["<RedirectToSignUp />", "/components/control/redirect-to-signup"],
