chore(backend,types): Introduce PaginatedRequest type to re-use across javascript docs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -583,6 +583,7 @@
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
           ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
           ["PaginatedResponse", "/references/javascript/types/paginated-response"],
+          ["PaginatedRequest", "/references/javascript/types/paginated-request"],
           ["CustomPage", "/references/javascript/types/custom-page"]
         ]
       ]
