feat: Introduce Organization Membership Requests

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -486,7 +486,8 @@
           ["Organization", "/references/javascript/organization/organization"],
           ["Members", "/references/javascript/organization/members"],
           ["Invitations", "/references/javascript/organization/invitations"],
-          ["Domains", "/references/javascript/organization/domains"]
+          ["Domains", "/references/javascript/organization/domains"],
+          ["Membership Requests", "/references/javascript/organization/membership-request"]
         ]
       ],
       [
@@ -500,6 +501,10 @@
       [
         "Organization Domain",
         "/references/javascript/organization-domain"
+      ],
+      [
+        "Organization Memberhip Request",
+        "/references/javascript/organization-membership-request"
       ],
       ["Session", "/references/javascript/session"],
       [
