making the component links look like they'll open in a new window. This may or may not surprise learners who expect that icon to link to a different site. Observe them and determine if different actions are required. Overall appearance will likely change with IA

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -40,8 +40,8 @@
       ["Restrictions", "/authentication/configuration/restrictions"],
       ["SAML at Clerk", "/authentication/saml-at-clerk"],
       "# Prebuilt Components",
-      ["<SignIn />", "/components/authentication/sign-in"],
-      ["<SignUp />", "/components/authentication/sign-up"],
+      ["<SignIn />", "https://clerk.com/docs/components/authentication/sign-in"],
+      ["<SignUp />", "https://clerk.com/docs/components/authentication/sign-up"],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
       [
@@ -90,8 +90,8 @@
       ["Metadata", "/users/metadata"],
       ["Deleting users", "/users/deleting-users"],
       "# Prebuilt Components",
-      ["<UserButton />", "/components/user/user-button"],
-      ["<UserProfile />", "/components/user/user-profile"],
+      ["<UserButton />", "https://clerk.com/docs/components/user/user-button"],
+      ["<UserProfile />", "https://clerk.com/docs/components/user/user-profile"],
       "# Guides",
       ["Sync Clerk data to your backend with webhooks", "/users/sync-data"],
       ["Web3 authentication", "/users/web3"]
@@ -102,10 +102,10 @@
     [
       ["Overview", "/organizations/overview"],
       "# Prebuilt Components",
-      ["<CreateOrganization />", "/components/organization/create-organization"],
-      ["<OrganizationProfile />", "/components/organization/organization-profile"],
-      ["<OrganizationSwitcher />", "/components/organization/organization-switcher"],
-      ["<OrganizationList />", "/components/organization/organization-list"],
+      ["<CreateOrganization />", "https://clerk.com/docs/components/organization/create-organization"],
+      ["<OrganizationProfile />", "https://clerk.com/docs/components/organization/organization-profile"],
+      ["<OrganizationSwitcher />", "https://clerk.com/docs/components/organization/organization-switcher"],
+      ["<OrganizationList />", "https://clerk.com/docs/components/organization/organization-list"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
