Revised the quickstart guide and added separate react-router guide

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -415,6 +415,7 @@
     { "title": "React", "icon": "react", "root": "references/react" },
     [
       ["Overview", "/references/react/overview"],
+      ["Add React Router", "/references/react/add-react-router"],
       "# Client-side Helpers",
       ["useUser()", "/references/react/use-user"],
       ["useClerk()", "/references/react/use-clerk"],
