Updating links and images locations

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -23,20 +23,6 @@
       ["Fastify", "/quickstarts/fastify"]
     ]
   ],
-  [
-    {
-      "title": "Guides",
-      "icon": "book-open",
-      "root": "guides"
-    },
-    [ ["Overview","/guides/overview"],
-      "# Protect accounts from attacks",
-      ["Brute force attacks and locking user accounts","/guides/user-lock-guide"],
-      ["Customize user lockout duration and login attempts limits", "/guides/customize-user-lockout"],
-      ["Unlock accounts from the Clerk Dashboard", "/guides/unlock-user-accounts"],
-      ["Programmatically lock and unlock accounts", "/guides/programmatically-lock-user-accounts"]
-    ]
-  ],
   "---",
   [
     {
@@ -394,11 +380,16 @@
       [
         "Vulnerability disclosure policy",
         "/security/vulnerability-disclosure-policy"
-      ],
+      ],      
       ["XSS leak protection", "/security/xss-leak-protection"],
       ["CSRF protection", "/security/csrf-protection"],
       ["Fixation protection", "/security/fixation-protection"],
-      ["Password protection and rules", "/security/password-protection"]
+      ["Password protection and rules", "/security/password-protection"],
+      "# Protect accounts from attacks",
+      ["Brute force attacks and locking user accounts","/security/user-lock-guide"],
+      ["Customize user lockout duration and login attempts limits", "/security/customize-user-lockout"],
+      ["Unlock accounts from the Clerk Dashboard", "/security/unlock-user-accounts"],
+      ["Programmatically lock and unlock accounts", "/security/programmatically-lock-user-accounts"]
     ]
   ],
   "# SDK References",
