chore: address pr comments

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -503,7 +503,7 @@
         "/references/javascript/organization-domain"
       ],
       [
-        "Organization Memberhip Request",
+        "Organization Membership Request",
         "/references/javascript/organization-membership-request"
       ],
       ["Session", "/references/javascript/session"],
