--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -387,7 +387,7 @@
       ["Password protection and rules", "/security/password-protection"],
       "# Protect accounts from attacks",
       ["Brute force attacks and locking user accounts","/security/user-lock-guide"],
-      ["Customize user lockout duration and login attempts limits", "/security/customize-user-lockout"],
+      ["Customize max login attempts and duration of of user lockout", "/security/customize-user-lockout"],
       ["Unlock accounts from the Clerk Dashboard", "/security/unlock-user-accounts"],
       ["Programmatically lock and unlock accounts", "/security/programmatically-lock-user-accounts"]
     ]
