User Lockout docs (#474)
Co-authored-by: Mark Pitsilos <mark.pitsilos@gmail.com>
Co-authored-by: cmayoracurzio <carlos.mayora.curzio@gmail.com>
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>
Co-authored-by: singhjatin297 <78216862+singhjatin297@users.noreply.github.com>
Co-authored-by: Konstantinos Pittas <konstantinos@clerk.dev>
Co-authored-by: Roy Anger <roy@royanger.com>
Co-authored-by: jshek-clerk <114083605+jshek-clerk@users.noreply.github.com>
Co-authored-by: JustMendex <40322913+JustMendex@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -380,11 +380,16 @@
       [
         "Vulnerability disclosure policy",
         "/security/vulnerability-disclosure-policy"
-      ],
+      ],      
       ["XSS leak protection", "/security/xss-leak-protection"],
       ["CSRF protection", "/security/csrf-protection"],
       ["Fixation protection", "/security/fixation-protection"],
-      ["Password protection and rules", "/security/password-protection"]
+      ["Password protection and rules", "/security/password-protection"],
+      "# Protect accounts from attacks",
+      ["Brute force attacks and locking user accounts","/security/user-lock-guide"],
+      ["Customize max login attempts and duration of of user lockout", "/security/customize-user-lockout"],
+      ["Unlock accounts from the Clerk Dashboard", "/security/unlock-user-accounts"],
+      ["Programmatically lock and unlock accounts", "/security/programmatically-lock-user-accounts"]
     ]
   ],
   "# SDK References",
