update title of quickstarts context

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -3,7 +3,7 @@
   "# Learning",
   [
     {
-      "title": "Quickstarts & Tutorials",
+      "title": "Quickstarts",
       "icon": "lightning-bolt",
       "root": "quickstarts"
     },
