update 'quickstarts & tutorials' title and 'setup clerk' title (#524)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -3,13 +3,13 @@
   "# Learning",
   [
     {
-      "title": "Quickstarts & Tutorials",
+      "title": "Quickstarts",
       "icon": "lightning-bolt",
       "root": "quickstarts"
     },
     [
       ["Overview", "/quickstarts/overview"],
-      ["Setup Clerk", "/quickstarts/setup-clerk"],
+      ["Set up Clerk", "/quickstarts/setup-clerk"],
       "# Full Stack",
       ["Next.js", "/quickstarts/nextjs"],
       ["Remix", "/quickstarts/remix"],
