reorganizing content around custom roles and permissions, adding overview and updating organizations

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -98,14 +98,19 @@
     ]
   ],
   [
-    { "title": "Organizations", "icon": "user-group", "root": "organizations" },
+    { "title": "Organizations, Roles, and Permisions", "icon": "user-group", "root": "organizations" },
     [
       ["Overview", "/organizations/overview"],
+      ["Roles and Permissions", "/organizations/roles-permissions"],
       "# Prebuilt Components",
       ["<CreateOrganization />", "/components/organization/create-organization"],
       ["<OrganizationProfile />", "/components/organization/organization-profile"],
       ["<OrganizationSwitcher />", "/components/organization/organization-switcher"],
       ["<OrganizationList />", "/components/organization/organization-list"],
+      ["<Gate />", "/components/roles-permissions/gate"],
+      "# Guides",
+      ["Create custom roles and assign permissions with Clerk", "/roles-permissions/create-roles-permissions"],
+      ["Use custom permissions to show and hide content from users", "/roles-permissions/permissions-show-hide-content"]
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
@@ -115,17 +120,6 @@
       ["Viewing memberships", "/organizations/viewing-memberships"],
       ["Managing multiple orgs", "/organizations/multiple-orgs"],
       ["Verified domains", "/organizations/verified-domains"]
-    ]
-  ],
-  [
-    { "title": "Roles and Permissions", "icon": "user-group", "root": "roles-permissions" },
-    [
-      ["Overview", "/roles-permissions/overview"],
-      "# Prebuilt Components",
-      ["<Gate />", "/components/roles-permissions/gate"],
-      "# Guides",
-      ["Create custom roles and assign permissions with Clerk", "/roles-permissions/create-roles-permissions"],
-      ["Use custom permissions to show and hide content from users", "/roles-permissions/permissions-show-hide-content"]
     ]
   ],
   [
