updating Gate to Protect

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -107,7 +107,7 @@
       ["<OrganizationProfile />", "/components/organization/organization-profile"],
       ["<OrganizationSwitcher />", "/components/organization/organization-switcher"],
       ["<OrganizationList />", "/components/organization/organization-list"],
-      ["<Gate />", "/components/roles-permissions/gate"],
+      ["<Protect />", "/components/protect"],
       "# Guides",
       ["Create custom roles and assign permissions with Clerk", "/roles-permissions/create-roles-permissions"],
       ["Use custom permissions to show and hide content from users", "/roles-permissions/permissions-show-hide-content"]
